2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.4 ===

2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/sftpuri.c:
        * common/gmounttracker.c:
        * daemon/gvfsmonitor.c:
        * daemon/gvfsbackend.c:
	Fix warnings
	
        * daemon/gvfsbackendburn.c:
        * daemon/gvfsbackendlocaltest.c:
        * daemon/gvfsbackendtrash.c:
	Update to latest gio API (removal of
	duplicate GSeekable calls).
	
2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump
	
=== gvfs 0.1.3 ===

2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * NEWS:
	Update for release
	
        * daemon/Makefile.am:
        * daemon/main.c:
	Autospawn fuse on daemon start.
	
        * daemon/mount.c:
        (read_mountable_config):
	Remove debug spew

2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* client/gvfsfusedaemon.c:
	Fix error with the names of the root items the
	fuse mount.

2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * daemon/mount.c:
	Reload the list of mountables on SIGUSR1

2008-01-21  Christian Kellner  <gicmo@gnome.org>


	* daemon/gvfsbackenddav.c:
	Small cleanups.

	* daemon/gvfsbackendhttp.c: 
	* daemon/gvfsbackendhttp.h:
	Implement query_info for plain http.

2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * client/Makefile.am:
        * client/gdaemonvfs.c:
        * client/sftpuri.c: Added.
	Added sftp uri mapper that aliases ssh: to sftp: (#509860)
	
        * client/smburi.c:
        (smb_from_uri):
	Fix leak.

2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.c:
	Do the initial mount tracker call sync so that
	the volume monitor is populated with the current
	status after construction. This is more in-line
	with what apps expect.
