@@ -1,3 +1,10 @@
+2008-01-22  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendsftp.c:
+	Ensure we return a IS_DIRECTORY error when
+	we open a file for reading (#511225)
+	The same needs to happen for writes.
+
 2008-01-21  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.ac:
